[package]
name = "market_data_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8.0" # check for the latest version
rayon = "1.5.0"  # Check for the latest version
log = "0.4"
log4rs = "1.0"

